tests/baselines/reference/ES3For-ofTypeCheck6(target=es2015).errors.txt
ES3For-ofTypeCheck6.ts(2,15): error TS2454: Variable 'union' is used before being assigned.


==== ES3For-ofTypeCheck6.ts (1 errors) ====
    var union: string[] | number[];
    for (var v of union) { }
                  ~~~~~
!!! error TS2454: Variable 'union' is used before being assigned.